--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>бе</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>gyfuy8itukf</title>
+	<style type="text/css">
+		h1{
+			color: red;
+			font-family:Arial ;
+		}
+		body{
+			background-color:green ;
+		}
+	</style>
 </head>
 <body>
-	<h1>Анкета</h1>
-	<br>
-	<h3>Имя</h3>
-	<p>пока нет</p>
-	<br>
-<h3>Хобби</h3>
-<p>отсутствует</p>
+<h1>vtd,yckdy6dc</h1>
+<p>yulfuylv</p>
+<a href="file:///C:/Users/14/Desktop/Новая%20папка%20(2)/blue.html">
+blue	
+</a>
+<a href="file:///C:/Users/14/Desktop/Новая%20папка%20(2)/yellow.html">
+	yellow
+</a>
+<a href="file:///C:/Users/14/Desktop/Новая%20папка%20(2)/red.html">
+	red
+</a>
 </body>
 </html>
